finish buy phone page, add view for admin and function for edit, delete, show

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -71,7 +71,7 @@
                                     <li><a href="{{ path("team") }}" title="Description Bip Bip" class="primary-title-menu">Notre team</a></li>
                                     <li class="pt-3"><h3 class="font-weight-bold">#Je suis BipBip</h3></li>
                                     <li><a href="{{ path("vends") }}" title="Vends ton téléphone" class="primary-title-menu">Vends ton tél</a></li>
-                                    <li><a href="{{ path("boutique_index") }}" title="Achète un BipBip" class="primary-title-menu">Achète un BipBip</a></li>
+                                    <li><a href="{{ path("boutique") }}" title="Achète un BipBip" class="primary-title-menu">Achète un BipBip</a></li>
                                     <li class="pt-3"><h3 class="font-weight-bold">BipBip a besoin de toi</h3></li>
                                     <li><a href="{{ path("show_collect") }}" title="Les points de collecte" class="primary-title-menu">Collecteurs / bippeurs</a></li>
                                     <li><a href="{{ path("asso") }}" title="Organiser une collecte" class="primary-title-menu">Asso, école, entreprise, mairie : devenir site de collecte</a></li>
