--- a/assets/scss/boutique.scss
+++ b/assets/scss/boutique.scss
@@ -29,8 +29,15 @@
     }
 
     #telephone{
+
         h2{
             border-bottom: 1px solid black;
+        }
+
+        .titleAll{
+            background-color: $secondary-color;
+            color: #FFFFFF;
+            border: none;
         }
         #telephonePromo{
             .priceContener{
@@ -40,40 +47,54 @@
                         border-radius: 10px;
                         padding: 0;
                         margin-top: 10px;
+                        background-color: $primary-color;
+                        width: 50%;
+                        margin-left: auto;
+                        margin-right: auto;
+                        color: #FFFFFF;
                     }
                 }
             }
         }
 
         #allPhones{
-            background-image: url("../images/fond.png");
-            .phone{
-                background-color: #FFFFFF;
-                border: 1px solid black;
-                border-radius: 10px;
-                height: 270px;
+            //background-image: url("../images/fond.png");
+            background-color: $secondary-color;
+                .phone{
+                    background-color: #FFFFFF;
+                    border: 1px solid black;
+                    border-radius: 10px;
+                    height: 270px;
 
-                figure img{
-                    width: 110px;
-                    height: 110px;
-                }
-
-                .priceContent{
-                    position: relative;
-                    top: 20px;
-
-                    .price{
-                        border: 1px solid black;
-                        border-radius: 17px;
-                        padding: 8px;
-                        background-color: $primary-color;
-                        color: #FFFFFF;
-                        font-weight: bold;
-                        font-size: 21px;
+                    figure img{
+                        width: 110px;
+                        height: 110px;
                     }
+
+                    .priceContent{
+                        position: relative;
+                        top: 20px;
+
+                        a{
+                            border: 1px solid black;
+                            border-radius: 30px;
+                            background-color: $secondary-color;
+                            padding: 6px;
+                        }
+
+                        .price{
+                            border: 1px solid black;
+                            border-radius: 17px;
+                            padding: 8px;
+                            background-color: $primary-color;
+                            color: #FFFFFF;
+                            font-weight: bold;
+                            font-size: 21px;
+                        }
+                    }
+
                 }
 
-            }
         }
 
         #textAsso{
