--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -58,7 +58,7 @@
                         <a href="{{ path('matrice_upload') }}">Matrice</a>
                         <a href="{{ path('admin_faq_index') }}">FAQ</a>
                         <a href="{{ path('users_anon') }}">Anonymisation</a>
-                        <a href="{{ path('boutique_new') }}">Boutique</a>
+                        <a href="{{ path('boutique_index') }}">Boutique</a>
                     </div>
                 </div>
             </li>
