--- a/templates/boutique/boutique.html.twig
+++ b/templates/boutique/boutique.html.twig
@@ -35,56 +35,64 @@ La boutique BipBip
         </div>
 
         <div class="container mt-5" id="telephone">
-            <h2 class="text-center">Offre du moment</h2>
+            <h2 class="text-center mb-5">Offre du moment</h2>
             <div class="row" id="telephonePromo">
-                <div class="col-12 col-sm-5 text-center">
-                    <img src="https://via.placeholder.com/250x500" class="w-auto" alt="">
-                </div>
-                <div class="col-sm-7 text-center">
-                    <div class="text-center mt-5 mb-5">
-                        <h4>APPLE</h4>
-                        <h5>Iphone 10 XS</h5>
-                        <h6>156 GO</h6>
+                {% for promo in promos %}
+                    <div class="col-12 col-sm-5 text-center border-left mt-5">
+                        <img src="{{ asset(promo.image) }}" alt="">
                     </div>
-                    <div class="">
-                        <p>
-                            descrition
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus culpa delectus dicta dolorem
-                            dolores error excepturi fugiat fugit hic ipsum neque nesciunt, non officia quaerat quo rem veniam,
-                            vero voluptate.
-                        </p>
+                    <div class="col-sm-7 text-center">
+                        <div class="text-center mt-5 mb-5">
+                            <h4>{{ promo.brand }}</h4>
+                            <h5>{{ promo.model }}</h5>
+                            <h6>{{ promo.capacity }} GO</h6>
+                        </div>
+                        <div class="">
+                            <p>
+                                descrition
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus culpa delectus dicta dolorem
+                                dolores error excepturi fugiat fugit hic ipsum neque nesciunt, non officia quaerat quo rem veniam,
+                                vero voluptate.
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-12 text-center priceContener">
-                    <div class="price">
-                        <h3>
-                            125 €
-                        </h3>
+                    <div class="col-12 justify-content-center text-center priceContener">
+                        <div class="price border-bottom d-flex">
+                            <h3>
+                                {{ promo.prix }} €
+                            </h3>
+                            <a href="{{ path('boutique_show', {id:promo.id}) }}" class="btn btn-success">Voir</a>
+                        </div>
                     </div>
-                </div>
+                {% endfor %}
             </div>
 
-            <h2 class="text-center mt-5">Tous les BipBip disponibles</h2>
+            <div class="row">
+                <h2 class="text-center titleAll mb-0 mt-5 w-100 pt-3">Tous les BipBip disponibles</h2>
+            </div>
 
-            <div class="row" id="allPhones">
+
+            <div class="row justify-content-around" id="allPhones">
                 {% for phone in phones %}
-                <div class="col-6 col-sm-4 col-md-3">
-                    <div class="phone text-center">
-                        <figure>
-                            <img src="{{ asset(phone.image) }}" alt="">
-                        </figure>
-                        <div>
-                            <p class="mb-0">{{ phone.brand }}</p>
-                            <p>{{ phone.model }}</p>
-                            <p>Etat: {{ phone.etat }}</p>
+                        <div class="col-12 col-sm-6 col-md-4 col-lg-3  col-xl-2 mt-3 mb-5">
+                            <a href="{{ path('boutique_show', {id:phone.id}) }}">
+                            <div class="phone text-center">
+                                <figure class="mt-3">
+                                    <img src="{{ asset(phone.image) }}" alt="">
+                                </figure>
+                                <div>
+                                    <p class="mb-0">{{ phone.brand }}</p>
+                                    <p>{{ phone.model }}</p>
+                                    <p>Etat: {{ phone.etat }}</p>
+                                </div>
+                                <div class="priceContent">
+                                    <span class="price">{{ phone.prix | number_format(2, '.', ',') }}€</span>
+                                </div>
+                            </div>
+                        </a>
                         </div>
-                        <div class="priceContent">
-                            <span class="price">{{ phone.prix | number_format(2, '.', ',') }} €</span>
-                        </div>
-                    </div>
-                </div>
                 {% endfor %}
             </div>
 
