page notre team

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -9,6 +9,7 @@ $grey-color : #BDBCBC;
 $primary-font: 'Avenir Next';
 $secondary-font : 'Century Gothic';
 $third-font : 'Lobster Hand';
+$fourth-font : 'Hand';
 $custom-file-text: (
     fr: "Parcourir",
 );
