--- a/templates/infos/team.html.twig
+++ b/templates/infos/team.html.twig
@@ -10,10 +10,10 @@
 
 {% block body %}
 <main class="container team-page">
-        <div class="title-vends row">
-            <img class="img-fluid" src="{{ asset('/images/bandeau-Notre team.png') }}" alt="Notre_histoire">
+        <div class="title-page">
+            <h1>Notre team</h1>
         </div>
-        <div class="mt-3">
+        <div class="mt-3 ml-3">
             <p>C’est bien connu les Nordistes sont conviviaux...<br></p>
             <p> On te laisse en savoir un peu plus sur notre équipe et ses valeurs !</p>
         </div>
@@ -31,18 +31,7 @@
                 <p class=" mt-3">
                     Son calme légendaire cache une puissance technique, <br>qui fait trembler les plus grands de ce monde.
                 </p>
-            </div>
-                        {#
-
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a> #}
+            </div>}
 
        <div class="col-12 justify-content-between">
            <h1 class="third-title mt-3 mb-3">Notre énergie étudiante</h1>
@@ -76,21 +65,21 @@
                 </p>
             </div>
 
-            <div class="col-12 justify-content-center">
+            <div class="col-12">
                 <h1 class="third-title mt-3 mb-3">Nos accompagnateurs experts</h1>
             </div>
-            <div class="col-6 col-sm-4 col-lg-4 col-xl-4 ">
+            <div class="col-6 col-sm-4 col-lg-4 col-xl-4 justify-content-center">
                 <img class="for-4 img-fluid m-1" src="{{asset('images/expert.png')}}" alt="expert">
                 <p class="mt-3 text-justify">
                 </p>
             </div>
-            <div class="col-6 col-sm-4 col-lg-4 col-xl-4">
+            <div class="col-6 col-sm-4 col-lg-4 col-xl-4 justify-content-center">
                 <img class="for-4 img-fluid m-1" src="{{asset('images/expert-gd-link.png')}}" alt="gd-link">
                 <p class="mt-3 text-justify">
                     Aussi énergique que directe, elle va droit au but. Le management et la mode n’ont aucun secret pour elle.
                 </p>
             </div>
-            <div class="col-6 col-sm-4 col-lg-4 col-xl-4 ">
+            <div class="col-6 col-sm-4 col-lg-4 col-xl-4 justify-content-center">
                 <img class="for-4 img-fluid m-1" src="{{asset('images/expert-corinne.png')}}" alt="Corinne">
                 <p class="mt-3 text-justify">
                     Aussi détendu que bienveillante, elle est toujours dispo pour donner vie à nos projets.
