modif des titres

--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -10,8 +10,8 @@
 {% block body %}
 <main class="home">
     <div id="notreHistoire">
-        <div class="title-vends row">
-            <img class="img-fluid" src="{{ asset('/images/bandeauNotreHistoire.png') }}" alt="Notre_histoire">
+        <div class="title-page">
+            <h1>Notre histoire</h1>
         </div>
         <div class="row justify-content-center">
             <div class="p-4 w-50">
@@ -44,8 +44,8 @@
             </div>
     </div>
     <div id="solution">
-        <div class="title-vends mb-3">
-            <img class="img-fluid" src="{{ asset('images/vends_title.png') }}" alt="NotreSolution">
+        <div class="title-page">
+            <h1>Notre solution</h1>
         </div>
 
         <div class="row justify-content-center m-4">
