correction orthographe fault

--- a/templates/home/collectorBipers.html.twig
+++ b/templates/home/collectorBipers.html.twig
@@ -27,7 +27,7 @@
                     <li>- Adhérer à un projet favorisant l’emploi local et le recyclage</li>
                     <li>- Accéder à notre réseau partenaire</li>
                     <li>- Communiquer sur nos évènements associatifs</li>
-                    <li>- Etre former au métier de testeur téléphonique</li>
+                    <li>- Etre formé au métier de testeur téléphonique</li>
                     <li>- Acquérir de nouvelles compétences pour ton CV</li>
                     <li>- Pouvoir financer tes projets</li>
                 </ul>
