--- a/templates/infos/team.html.twig
+++ b/templates/infos/team.html.twig
@@ -82,7 +82,7 @@
             <div class="col-6 col-sm-4 col-lg-4 col-xl-4 justify-content-center">
                 <img class="for-4 img-fluid m-1" src="{{asset('images/expert-corinne.png')}}" alt="Corinne">
                 <p class="mt-3 text-justify">
-                    Aussi détendu que bienveillante, elle est toujours dispo pour donner vie à nos projets.
+                    Aussi détendue que bienveillante, elle est toujours dispo pour donner vie à nos projets.
             </div>
         </div>
 </main>
