titre admin estimation and button Collectes a venir

--- a/templates/estimations/index.html.twig
+++ b/templates/estimations/index.html.twig
@@ -18,11 +18,11 @@
             </div>
             {% endif %}
 
-            <h1 class="primary-title">{{ pageTitle }}</h1>
+            <h1 class="third-title text-center">{{ pageTitle }}</h1>
             <div class="text-right">
-                <a class="text-right" href="{{ path('show_collect') }}">
+                <button class="third-button text-right" href="{{ path('show_collect') }}">
                     Collectes à venir
-                </a>
+                </button>
 
             <div class="row align-items-center mb-2 mt-4">
                 {# legende #}
