--- a/templates/admin/index_organism.html.twig
+++ b/templates/admin/index_organism.html.twig
@@ -10,7 +10,7 @@
 {% block body %}
 
     <main id="organisms">
-        <h1 class="adminTitle primary-title">Les partenaires</h1>
+        <h1 class="adminTitle third-title">Les partenaires</h1>
 
         <a class="primary-button addOrganism" href="{{ path('organisms_new') }}">Ajouter</a>
 
