--- a/templates/bdc/index.html.twig
+++ b/templates/bdc/index.html.twig
@@ -5,7 +5,7 @@
     <main class="container">
         <div class="row">
             <div class="col-12 mx-auto text-center">
-                <h1 class="primary-title">Liste des bons de cession stockés</h1>
+                <h1 class="third-title m-4">Liste des bons de cession stockés</h1>
             </div>
         </div>
         <div class="row bg-info align-items-center">
