--- a/templates/boutique/index.html.twig
+++ b/templates/boutique/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Boutique admin{% endblock %}
 
 {% block body %}
-    <h1>Boutique</h1>
+    <h1 class="third-title text-center mt-3">Boutique</h1>
 
     <table class="table text-center">
         <thead>
