--- a/templates/collects/index.html.twig
+++ b/templates/collects/index.html.twig
@@ -9,7 +9,7 @@
 
 {% block body %}
     <main class="admin-tables">
-        <h2 class="primary-title">Liste des collectes en cours</h2>
+        <h2 class="third-title text-center mt-4">Liste des collectes en cours</h2>
         <a href="{{ path('collects_new') }}" class="fourth-button add">Ajouter</a>
 
         <div class="container">
