--- a/templates/user/indexCollectors.html.twig
+++ b/templates/user/indexCollectors.html.twig
@@ -9,8 +9,8 @@
 
 {% block body %}
     <main class="admin-tables">
-        <h2 class="primary-title">Liste des collecteurs</h2>
-        <a href="{{ path('register_collector') }}" class="fourth-button add">Ajouter</a>
+        <h2 class="third-title text-center mt-4">Liste des collecteurs</h2>
+        <a href="{{ path('register_collector') }}" class="fourth-button add2">Ajouter</a>
 
         <div class="container">
             <div class="row align-items-center table-head rounded-top">
