--- a/templates/admin/_form.html.twig
+++ b/templates/admin/_form.html.twig
@@ -8,9 +8,9 @@
     <div class="row">
         <div class="col-10 mx-auto text-center form p-4">
             {{ form_start(form) }}
-            <h1 class="primary-title mb-5">Mettre à jour la matrice</h1>
+            <h1 class="third-title mb-4">Mettre à jour la matrice</h1>
                 {{ form_widget(form.matrice_field, {'attr': {'class': 'form-control mb-3', 'placeholder': 'Charger la matrice'}}) }}
-            <button class="secondary-button matrix_button">Valider</button>
+            <button class="secondary-button matrix_button mt-4">Valider</button>
             {{ form_end(form) }}
         </div>
     </div>
