--- a/templates/admin/anon.html.twig
+++ b/templates/admin/anon.html.twig
@@ -4,7 +4,7 @@
 
 {%  block body %}
     <main class="container">
-        <h1 class="primary-title">Anonymisation des données</h1>
+        <h1 class="third-title text-center m-4">Anonymisation des données</h1>
         <div class="row mb-3">
 <p>Le RGPD nous demande de ne pas conserver les données d'utilisateurs non connectés depuis plus de 3 ans. Cette page permet de gérer les utilisateurs concernés.</p>
         </div>
