--- a/templates/faq/new.html.twig
+++ b/templates/faq/new.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1 class="primary-title">Créer une nouvelle question</h1>
+    <h1 class="third-title text-center m-4">Créer une nouvelle question</h1>
 
     {{ include('faq/_form.html.twig') }}
     <div class="row justify-content-center">
