--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -121,7 +121,10 @@
                                 une bonne action.</p>
                         </div>
                         <div class="col-12 col-sm-4 text-center">
-                            <img src="{{ asset('images/tel_collectes.png') }}" alt="Téléphones collectés" id="tel-collectes">
+                            <img src="{{ asset('images/phone-green.png') }}" alt="Téléphones collectés" id="tel-collectes">
+                            <div class="blue-cadre mx-auto">
+                                <span id="number">1520</span><br>téléphones<br>collectés<br>par nos Bipers
+                            </div>
                         </div>
                     </div>
                     <div class="row justify-content-center">
