--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -69,15 +69,22 @@ a{
 /* TITLES */
 .title-page {
     background-color: $secondary-color;
-    width: 100%;
-    height: auto;
+    height: 115px;
+    width: auto;
     h1 {
-        font-size: 2.1rem;
-        font-weight: 200;
+        font-size: 2.5rem;
+        width: 100%;
+        font-weight: 400;
         font-family: $fourth-font;
         color: white;
-        padding: 48px;
-        font-style: italic;
+        margin: 35px 0 0 354px;
+        position: absolute;
+        background-image: url("../../public/images/feuille-bipbip-title.png");
+        background-repeat: no-repeat;
+
+        @media screen and (min-width: 768px){
+            min-height : 65vh;
+        }
     }
 }
 .primary-title{
