Categories buttons on FAQ change color when selected

--- a/assets/scss/faq.scss
+++ b/assets/scss/faq.scss
@@ -7,7 +7,7 @@
     border-radius: 5px;
 }
 
-#all-categories {
+.selected-category {
     background-color: $primary-color;
     color: white;
     font-weight: 600;
