Change link for Achete button

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -18,7 +18,7 @@
                     </a>
                 </div>
                 <div class="col col-md-4 text-center">
-                    <a href="{{ path('boutique_index') }}">
+                    <a href="{{ path('boutique') }}">
                         <img src="{{ asset('images/btn-achete.png') }}"
                              alt="Achète un tél"
                              class="img-fluid img-home">
