--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -105,20 +105,6 @@ header{
     }
 }
 
-// SearchBar
-#nameSearch{
-    margin-top: 25px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    padding: 4px;
-
-    input#search_nameSearch{
-        width: 70%;
-        padding: 6px;
-        border-radius: 5px;
-    }
-}
-
 // Menu gauche
 .menu-admin {
     width: 100%;
@@ -212,49 +198,39 @@ body{
     font-family: "co-headline", sans-serif;
 }
 
-#mainFaq {
 
+.mainFaq {
     position: relative;
 
     .tableFaq {
-        width: 60%;
-        margin: auto;
+        margin: 2%;
+        width: 100%;
         @media screen and (max-width: 1024px){
             margin: auto;
-            width: 80%;
+            width: 85%;
         }
-
-        tr {
-            border-bottom: 1px solid black;
-            width: 10%;
+        .head-table {
+            background-color: $primary-color;
+            color: white;
+            padding: 10px;
+            width: 100%;
+            height: 280px;
         }
 
         tbody {
 
             .questionFaq {
-                display: flex;
-                flex-direction: column;
-                text-align: justify;
-                padding: 1px 40% 10px 5px;
-            }
+                border-bottom: #dee2e6 1px solid;
+                width: 70%;
 
-            .fourth-button {
-                margin: 20px auto 20px 80%;
-                width: 20%;
-            }
-
-            .editFaq {
-                padding: 14px 1%;
-                margin: 20px auto;
-                width: 140px;
-                height: 53px;
-            }
-
-            .deleteFaq {
-                width: 21%;
-                padding: 1% 1px;
-                @media screen and (max-width: 1024px){
-                    width: 28%;
+                .fourth-button {
+                    margin: 10px auto;
+                    padding: 1px;
+                    width: 110px;
+                    height: 35px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                 }
             }
         }
@@ -262,27 +238,7 @@ body{
     }
 }
 
-.head-table {
-    background-color: $primary-color;
 
-    td {
-        height: 60px;
-        text-align: center;
-        color: white;
-        padding: 20px;
-    }
-}
-
-.resultSearch a {
-    display : flex;
-    flex-direction: column;
-    margin-bottom: 15px;
-    margin-left: 40px;
-    margin-right: 25px;
-    font-size: 1.3rem;
-    font-style: italic;
-    text-decoration: none;
-}
 
 /* ADMIN ESTIMATIONS */
 
