--- a/templates/admin/admin_faqIndex.html.twig
+++ b/templates/admin/admin_faqIndex.html.twig
@@ -8,32 +8,23 @@
 {% block title %} Foire Aux Questions {% endblock %}
 
 {% block body %}
-    <main id="mainFaq">
-        <h1 class="third-title text-center mt3"> Foire Aux Questions </h1>
+    <main class="mainFaq">
+        <h1 class="third-title text-center mt-3"> Foire Aux Questions </h1>
+
+        <a class="primary-button add" href="{{ path('faq_new') }}">Ajouter</a>
 
         <table class="tableFaq">
 
-            <thead class="head-table">
-               <tr>
-                   <td>Questions</td>
-                   <td></td>
-                   <td><a class="secondary-button p-3" href="{{ path('faq_new') }}">Ajouter</a></td>
-               </tr>
-            </thead>
-
             {% for faq in faqContent %}
-
                 <tbody>
-                <tr>
-                    <td class="questionFaq">{{faq.question}} </td>
-                    <td><a class="fourth-button editFaq" href=" {{ path('faq_edit', { 'id': faq.id} ) }}">Modifier</a></td>
-                    <td class="deleteFaq">{{ include('faq/_delete_form.html.twig') }}</td>
-                </tr>
+                    <tr>
+                        <td class="questionFaq">{{faq.question}} </td>
+                        <td class="questionFaq"><a class="fourth-button" href=" {{ path('faq_edit', { 'id': faq.id} ) }}">Modifier</a></td>
+                        <td class="questionFaq">{{ include('faq/_delete_form.html.twig') }}</td>
+                    </tr>
                 </tbody>
             {% endfor %}
 
         </table>
-
-
     </main>
 {% endblock %}
