modification largeur carte telephone, ajout majuscule sur page Vend

--- a/templates/boutique/show.html.twig
+++ b/templates/boutique/show.html.twig
@@ -8,7 +8,7 @@
     <div class="container mb-5">
         <div class="row">
             <div class="contenu">
-                <div class="content d-flex bg-info">
+                <div class="content d-flex">
                     <div class="image col-3">
                         <img src="{{ asset(boutique.image) }}" class="mr-5" alt="">
                     </div>
