--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -95,7 +95,7 @@
                                 <div class="col">
                                 <span class="explain-text-color">Récupère ton argent<br>
                                 Fais un don</span> de la valeur de ton tél pour une association<br>
-                                    <span class="explain-text-color">profite d'un bon de réduction</span> sur l'achat
+                                    <span class="explain-text-color">Profite d'un bon de réduction</span> sur l'achat
                                     d'un bipbip mobile
                                 </div>
                             </div>
