--- a/templates/boutique/boutique.html.twig
+++ b/templates/boutique/boutique.html.twig
@@ -76,7 +76,7 @@ La boutique BipBip
 
             <div class="row justify-content-around" id="allPhones">
                 {% for phone in phones %}
-                        <div class="col-12 col-sm-6 col-md-4 col-lg-3  col-xl-2 mt-3 mb-5">
+                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3 mb-5">
                             <a href="{{ path('boutique_show', {id:phone.id}) }}">
                             <div class="phone text-center">
                                 <figure class="mt-3">
