--- a/templates/user/showCollect.html.twig
+++ b/templates/user/showCollect.html.twig
@@ -81,6 +81,10 @@
                         <div class="col-2">
                             <a class="primary-button" href="{{ path('choice', {collect: collect.id }) }}">J'y vais !</a>
                         </div>
+                    {% else %}
+                        <div class="col-2">
+                            <a class="primary-button" href="{{ path('signin') }}">J'y vais !</a>
+                        </div>
                     {% endif %}
                 </div>
         {% endfor %}
