--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -265,7 +265,8 @@ header {
     /* MENU */
 
     #menu {
-
+        margin-top: -25px;
+        margin-bottom: 100px;
         a {
             color: black;
             text-decoration: none;
@@ -292,7 +293,7 @@ header {
             img {
                 width: 60px;
                 height: 50px;
-                margin: 40px auto;
+                margin: 20px auto;
             }
         }
 
