--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,16 +16,16 @@
             <div class="col col-lg-8 bg-white">
     {% block header %}
         <header>
-            <div class="row pb-3">
+            <div class="row pb-3 ">
                 <div class="col-8 col-sm-12 pt-4 text-center">
                     <a href="{{ path('home') }}" class="logo-title "><img src="{{ asset('/images/logo-bipbip.png') }}"
                                                                           alt="BipBip ton Green Mobile" /></a>
                 </div>
-                <div class="col-4 col-md-6">
+                <div class="col-4 col-md-6 col-lg-12">
                     <nav id="menu">
                         <img src="{{ asset('images/close.png') }}" alt="Fermer le menu" class="close-button"/>
-                        <div class="row justify-content-around">
-                            <div class="col-8 col-sm-5 col-lg-3 text-center">
+                        <div class="row justify-content-around pl-5 pr-5 pb-5 mt-5">
+                            <div class="col-10 col-sm-5 col-lg-3 mt-lg-5 text-center">
                                 <div class="row smallLogoMenu align-content-around">
                                     <div class="col">
                                         {% if app.user %}
@@ -33,8 +33,7 @@
                                         {% else %}
                                             <a href="{{ path('app_login') }}">
                                         {% endif %}
-                                            <img src="{{ asset('images/silhouette.png') }}" alt="Profil">
-                                        </a>
+                                            <img src="{{ asset('images/silhouette.png') }}" alt="Profil"></a>
                                     </div>
                                     <div class="col">
                                         <a href="{{ path('add_message') }}">
@@ -81,9 +80,9 @@
 
 
 
-                            <div class="col-12 col-sm-6 col-lg-5 mt-5">
+                            <div class="col-12 mt-1 col-sm-6 col-lg-5 mt-lg-4">
                                 <ul>
-                                    <li><h3 class="primary-title-menu-black">BipBip</h3></li>
+                                    <li><h3 class="primary-title-menu-black pt-5">BipBip</h3></li>
                                     <li><a href="{{ path("histoire") }}" title="Notre histoire" class="primary-title-menu">Notre histoire</a></li>
                                     <li><a href="{{ "/histoire/#solution" }}" title="Notre solution" class="primary-title-menu">Notre solution</a></li>
                                     <li><a href="{{ path("team") }}" title="Description Bip Bip" class="primary-title-menu">Notre team</a></li>
@@ -92,8 +91,8 @@
                                     <li><a href="{{ path("boutique") }}" title="Achète un BipBip" class="primary-title-menu">Achète un BipBip</a></li>
                                     <li class="pt-3"><h3 class="primary-title-menu-black">BipBip a besoin de toi</h3></li>
                                     <li><a href="{{ path("show_collect") }}" title="Les points de collecte" class="primary-title-menu">Collecteurs / Bipers</a></li>
-                                    <li><a href="{{ path("asso") }}" title="Organiser une collecte" class="primary-title-menu">Devenir site de collecte : asso, école, entreprise, mairie </a></li>
-                                    <li><a href="{{ path("organisms_index") }}" title="Nos partenaires" class="primary-title-menu">Nos partenaires : start-up innovantes et engagées pour la région</a></li>
+                                    <li><a href="{{ path("asso") }}" title="Organiser une collecte" class="primary-title-menu">Devenir site de collecte</a></li>
+                                    <li><a href="{{ path("organisms_index") }}" title="Nos partenaires" class="primary-title-menu">Nos partenaires / Nos bons plans</a></li>
                                     <li><a href="{{ path("add_message") }}" title="Parrain" class="primary-title-menu">Parrain</a></li>
                                     <li class="pt-3"><h3 class="primary-title-menu-black">Parlons BipBip</h3></li>
                                     <li><a href="{{ path("add_message") }}" title="Contacte nous" class="primary-title-menu">Contacte nous</a></li>
