--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -10,9 +10,7 @@
 {% block body %}
     <main class="home">
 
-                <div class="title-vends row justify-content-center p-3">
-                    <img src="{{ asset('images/vends_title.png') }}" alt="Vends ton tél">
-                </div>
+        <h1 class="title-page"><span>Vends ton tél</span></h1>
 
                 <section>
                     <div class="row align-items-center">
