--- a/templates/infos/team.html.twig
+++ b/templates/infos/team.html.twig
@@ -9,10 +9,8 @@
 {% endblock %}
 
 {% block body %}
-<main class="container team-page">
-        <div class="title-page">
-            <h1>Notre team</h1>
-        </div>
+<main class="team-page">
+            <h1 class="title-page"><span>Notre team</span></h1>
         <div class="mt-3 ml-3">
             <p>C’est bien connu les Nordistes sont conviviaux...<br></p>
             <p> On te laisse en savoir un peu plus sur notre équipe et ses valeurs !</p>
