--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -10,9 +10,7 @@
 {% block body %}
 <main class="home">
     <div id="notreHistoire">
-        <div class="title-page">
-            <h1>Notre histoire</h1>
-        </div>
+        <h1 class="title-page"><span>Notre histoire</span></h1>
         <div class="row justify-content-center">
             <div class="p-4 w-50">
                 <img src="{{ asset('images/video.png') }}" alt="video" class="videoNatacha">
@@ -44,9 +42,7 @@
             </div>
     </div>
     <div id="solution">
-        <div class="title-page">
-            <h1>Notre solution</h1>
-        </div>
+        <h1 class="title-page"><span>Notre solution</span></h1>
 
         <div class="row justify-content-center m-4">
             <p>Bipbip est la solution innovante et environnementale pour la région... on te fait un dessin ?</p>
