Cursor pointer on estimation page

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -221,6 +221,9 @@ a{
 .grey-button{
     @include button($grey-color);
     color: black;
+    &:hover{
+        cursor: pointer;
+    }
 }
 
 .small-button {
