--- a/templates/estimation/index.html.twig
+++ b/templates/estimation/index.html.twig
@@ -2,9 +2,8 @@
 {% block body %}
 
 
-        <div class="title-vends row justify-content-center p-3">
-            <img src="{{ asset('images/estim_title.png') }}" alt="Estime ton tél">
-        </div>
+    <h1 class="title-page"><span>Estime ton tel</span></h1>
+
         <div class="row">
             <div class="col-12">
                 <h1 class="primary-title text-left">
