--- a/templates/user/showCollect.html.twig
+++ b/templates/user/showCollect.html.twig
@@ -83,7 +83,7 @@
                         </div>
                     {% else %}
                         <div class="col-2">
-                            <a class="primary-button" href="{{ path('signin') }}">J'y vais !</a>
+                            <a class="primary-button" href="{{ path('app_login') }}">J'y vais !</a>
                         </div>
                     {% endif %}
                 </div>
