--- a/templates/infos/livraisons.html.twig
+++ b/templates/infos/livraisons.html.twig
@@ -3,9 +3,7 @@
 {% block title %}Transport et frais de livraison - BipBip{% endblock %}
 
 {% block body %}
-    <div class="title-vends row justify-content-center p-3">
-        <img src="{{ asset('images/vends_title.png') }}" alt="Vends ton tél">
-    </div>
+    <h1 class="title-page"><span>Livraisons et garanties</span></h1>
     <div class="row">
         <div class="col-12 p-4">
             <h2 class="primary-title">Transport et frais de livraison</h2>
