Changement du titre 'infos BipBip'

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -192,7 +192,7 @@
                 </div>
 
                 <div class="col-6 col-sm mb-4 text-center">
-                    <div class="font-weight-bold pb-2">BipBip Infos<br></div>
+                    <div class="font-weight-bold pb-2">Infos BipBip<br></div>
                     <a href="{{ path("bonsplans") }}" title="Les bons plans">Les bons plans</a><br>
                     <a href="{{ path("recrute") }}" title="Jobs/recrutement">Jobs/recrutement</a><br>
                     <a href="{{ path("livraisons") }}" title="Livraisons et garanties">Livraisons et garanties</a><br>
